Aktienanalyse Datenbankconnection, Tabellen, Bugfixes