@@ -2,37 +2,18 @@ package p2_view;
 
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.HashMap;
+
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import java.util.Set;
 import java.util.stream.Collectors;
-
-import javax.swing.JPanel;
-
-import org.jfree.chart.ChartFactory;
-import org.jfree.chart.ChartPanel;
-import org.jfree.chart.JFreeChart;
-import org.jfree.chart.plot.PlotOrientation;
-import org.jfree.data.time.Day;
-import org.jfree.data.time.TimeSeries;
-import org.jfree.data.time.TimeSeriesCollection;
-import org.jfree.data.xy.XYDataset;
-import org.jfree.data.xy.XYSeries;
-import org.jfree.data.xy.XYSeriesCollection;
 
 import java.io.IOException;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 
-import db_objects.Aktie;
-import db_objects.AktieTableEntry;
-import db_objects.Assetclass;
-import db_objects.PortfolioTableEntry;
 import javafx.beans.property.ListProperty;
 import javafx.beans.property.SimpleListProperty;
 import javafx.beans.value.ChangeListener;
@@ -44,7 +25,6 @@ import javafx.embed.swing.SwingNode;
 import javafx.fxml.FXML;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
-import javafx.scene.Scene;
 import javafx.scene.chart.CategoryAxis;
 import javafx.scene.chart.LineChart;
 import javafx.scene.chart.NumberAxis;
@@ -64,6 +44,9 @@ import javafx.scene.control.TextField;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.StackPane;
+import p0_db_objects.Aktie;
+import p0_db_objects.AktieTableEntry;
+import p0_db_objects.PortfolioTableEntry;
 import p0_model.Model;
 import p1_controller.Controller;
 
@@ -71,10 +54,11 @@ public class VC_Shares {
 	public Model m1;
 	public Controller c1;
 
-	@FXML
-	private BorderPane bp1;
 	// Nicht FXML!
 	private SwingNode sn1;
+
+	@FXML
+	private BorderPane bp1;
 	@FXML
 	private ListView<String> listView1;
 	@FXML
@@ -100,7 +84,7 @@ public class VC_Shares {
 	@FXML
 	private TableColumn<AktieTableEntry, String> nameColumn1;
 	@FXML
-	private TableColumn<AktieTableEntry, Number> industryColumn1;
+	private TableColumn<AktieTableEntry, String> industryColumn1;
 	@FXML
 	private TableColumn<AktieTableEntry, String> sigmaColumn1;
 	@FXML
@@ -110,7 +94,7 @@ public class VC_Shares {
 	@FXML
 	private TableColumn<AktieTableEntry, String> nameColumn2;
 	@FXML
-	private TableColumn<AktieTableEntry, Number> industryColumn2;
+	private TableColumn<AktieTableEntry, String> industryColumn2;
 	@FXML
 	private TableColumn<AktieTableEntry, String> sigmaColumn2;
 	@FXML
@@ -120,7 +104,7 @@ public class VC_Shares {
 	@FXML
 	private TableColumn<AktieTableEntry, String> nameColumn3;
 	@FXML
-	private TableColumn<AktieTableEntry, Number> industryColumn3;
+	private TableColumn<AktieTableEntry, String> industryColumn3;
 	@FXML
 	private TableColumn<AktieTableEntry, String> sigmaColumn3;
 	@FXML
@@ -130,7 +114,7 @@ public class VC_Shares {
 	@FXML
 	private TableColumn<AktieTableEntry, String> nameColumn4;
 	@FXML
-	private TableColumn<AktieTableEntry, Number> industryColumn4;
+	private TableColumn<AktieTableEntry, String> industryColumn4;
 	@FXML
 	private TableColumn<AktieTableEntry, String> sigmaColumn4;
 	@FXML
@@ -140,7 +124,7 @@ public class VC_Shares {
 	@FXML
 	private TableColumn<AktieTableEntry, String> nameColumn5;
 	@FXML
-	private TableColumn<AktieTableEntry, Number> industryColumn5;
+	private TableColumn<AktieTableEntry, String> industryColumn5;
 	@FXML
 	private TableColumn<AktieTableEntry, String> sigmaColumn5;
 	@FXML
@@ -201,56 +185,53 @@ public class VC_Shares {
 
 	public void updateData() {
 
-//////Initiale Anpassungen
+		// Initiale Anpassungen von UI-Elementen
 		tabPane1.getStyleClass().add("floating");
 
-//Tabellen füllen		
-
-
+		// Tabellen füllen
 		ObservableList<AktieTableEntry> allAktienOhneKurseTE_DAX = m1.allAktienOhneKurseTE.stream()
 				.filter(x -> (x.getIndex().equals("DAX")))
 				.collect(Collectors.toCollection(FXCollections::observableArrayList));
-		System.out.println("Tabelle22222" + allAktienOhneKurseTE_DAX);
 		tableView1.setItems(allAktienOhneKurseTE_DAX);
 		IdColumn1.setCellValueFactory(cellData -> cellData.getValue().get2Share_id());
 		nameColumn1.setCellValueFactory(cellData -> cellData.getValue().get2Name());
+		industryColumn1.setCellValueFactory(cellData -> cellData.getValue().get2Industry());
 
 		ObservableList<AktieTableEntry> allAktienOhneKurseTE_TecDAX = m1.allAktienOhneKurseTE.stream()
 				.filter(x -> (x.getIndex().equals("TecDAX")))
 				.collect(Collectors.toCollection(FXCollections::observableArrayList));
-		System.out.println("Tabelle22222" + allAktienOhneKurseTE_TecDAX);
 		tableView2.setItems(allAktienOhneKurseTE_TecDAX);
 		IdColumn2.setCellValueFactory(cellData -> cellData.getValue().get2Share_id());
 		nameColumn2.setCellValueFactory(cellData -> cellData.getValue().get2Name());
+		industryColumn2.setCellValueFactory(cellData -> cellData.getValue().get2Industry());
 
 		ObservableList<AktieTableEntry> allAktienOhneKurseTE_MDAX = m1.allAktienOhneKurseTE.stream()
 				.filter(x -> (x.getIndex().equals("MDAX")))
 				.collect(Collectors.toCollection(FXCollections::observableArrayList));
-		System.out.println("Tabelle33333" + allAktienOhneKurseTE_MDAX);
 		tableView3.setItems(allAktienOhneKurseTE_MDAX);
 		IdColumn3.setCellValueFactory(cellData -> cellData.getValue().get2Share_id());
 		nameColumn3.setCellValueFactory(cellData -> cellData.getValue().get2Name());
+		industryColumn3.setCellValueFactory(cellData -> cellData.getValue().get2Industry());
 
 		ObservableList<AktieTableEntry> allAktienOhneKurseTE_Nikkei = m1.allAktienOhneKurseTE.stream()
 				.filter(x -> (x.getIndex().equals("Nikkei 225")))
 				.collect(Collectors.toCollection(FXCollections::observableArrayList));
-		System.out.println("Tabelle44444" + allAktienOhneKurseTE_Nikkei);
 		tableView4.setItems(allAktienOhneKurseTE_Nikkei);
 		IdColumn4.setCellValueFactory(cellData -> cellData.getValue().get2Share_id());
 		nameColumn4.setCellValueFactory(cellData -> cellData.getValue().get2Name());
+		industryColumn4.setCellValueFactory(cellData -> cellData.getValue().get2Industry());
 
 		ObservableList<AktieTableEntry> allAktienOhneKurseTE_DowJones = m1.allAktienOhneKurseTE.stream()
 				.filter(x -> (x.getIndex().equals("Dow Jones")))
 				.collect(Collectors.toCollection(FXCollections::observableArrayList));
-		System.out.println("Tabelle55555" + allAktienOhneKurseTE_DowJones);
 		tableView5.setItems(allAktienOhneKurseTE_DowJones);
 		IdColumn5.setCellValueFactory(cellData -> cellData.getValue().get2Share_id());
 		nameColumn5.setCellValueFactory(cellData -> cellData.getValue().get2Name());
+		industryColumn5.setCellValueFactory(cellData -> cellData.getValue().get2Industry());
 
 		///////////////////////
 		// 5x Table Listener
 		///////////////////////
-
 		tableView1.getSelectionModel().selectedItemProperty()
 				.addListener((observable, oldValue, newValue) -> handleSaveSelected(newValue));
 		tableView2.getSelectionModel().selectedItemProperty()
@@ -262,18 +243,10 @@ public class VC_Shares {
 		tableView5.getSelectionModel().selectedItemProperty()
 				.addListener((observable, oldValue, newValue) -> handleSaveSelected(newValue));
 
-		System.out.println("6666" + m1.currentPortfoliosAktienMitKursen);
-	
-		//Liste füllen		
-		simpleStringList= new ArrayList<>();
-		m1.currentPortfoliosAktienMitKursen.forEach( (k,v) -> simpleStringList.add(v.getShare_id() + " " + v.getName() + " (" +v.getIndex() + ")"));
-
-
-		simpleStringList.add("CNH");
-		simpleStringList.add("JPY");
-		simpleStringList.add("HKD");
-		simpleStringList.add("KRW");
-		simpleStringList.add("SGD");
+		// Liste füllen
+		simpleStringList = new ArrayList<>();
+		m1.currentPortfoliosAktienMitKursen.forEach(
+				(k, v) -> simpleStringList.add(v.getShare_id() + " " + v.getName() + " (" + v.getIndex() + ")"));
 
 		listView1.itemsProperty().bind(listProperty);
 		listProperty.set(FXCollections.observableArrayList(simpleStringList));
@@ -281,16 +254,15 @@ public class VC_Shares {
 		listView1.getSelectionModel().selectedItemProperty().addListener(new ChangeListener<String>() {
 			@Override
 			public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
-				System.out.println(
-						"ListView selection changed from oldValue = " + oldValue + " to newValue = " + newValue);
-				m1.selectedCurrentSharesString = newValue;
-
+				if (newValue != null) {
+					m1.selectedCurrentSharesString = newValue;
+				}
 				create2();
 			}
 		});
 
 		////////////////////////////////////////////
-		// FILL SCATTERCHART
+		// Scattertchart füllen
 		////////////////////////////////////////////
 		sc.setTitle("Sigma-R-Diagramm der Aktien");
 		// 5x Assetclass-Daten einfüllen
@@ -301,46 +273,11 @@ public class VC_Shares {
 			series1.setName(ac1.getName());
 			scatterGraphSeries.add(series1);
 		}
-		//// 1x GesamtPortfolio-Daten einfüllen
-		// XYChart.Series<Double,Double> series1 = new XYChart.Series<Double,Double>();
-		// series1.getData().add(new XYChart.Data<Double,
-		//// Double>(m1.usedPortfolio.getSigma_asset_preview(),
-		//// m1.usedPortfolio.getRisk_asset_preview()));
-		// series1.setName(m1.usedPortfolio.getName());
-		// scatterGraphSeries.add(series1);
 
 		sc.setData(scatterGraphSeries);
-		////////////////////////////////////////////
-		// END FILL SCATTERCHART
-		////////////////////////////////////////////
 
-		// ////////////////////////////////
-		// //LINECHART1
-		// ////////////////////////////////
 		sn1 = new SwingNode();
 		paneWithSwing.getChildren().add(sn1);
-
-		// sn1= new SwingNode();
-		// paneWithSwing.getChildren().add(sn1);
-		// Aktie a1 =
-		// m1.currentPortfoliosAktienMitKursen.get(Integer.valueOf(m1.selectedCurrentSharesString.substring(0,
-		// m1.selectedCurrentSharesString.indexOf(" "))));
-		// XYSeries series = new XYSeries("Y = X");
-		// XYSeriesCollection dataset = new XYSeriesCollection();
-		// dataset.addSeries(series);
-		// // Create chart
-		// JFreeChart chart = ChartFactory.crea(
-		// "XY Line Chart Example",
-		// "X-Axis",
-		// "Y-Axis",
-		// dataset,
-		// PlotOrientation.VERTICAL,
-		// true, true, false);
-		//
-		//
-		// // Create Panel
-		// ChartPanel panel = new ChartPanel(chart);
-		// sn1.setContent(panel);
 	}
 
 	////////////////////////////////////////////////////////
@@ -348,9 +285,8 @@ public class VC_Shares {
 	////////////////////////////////////////////////////////
 	@FXML
 	private void handleDeleteSelected() {
-	    System.out.println(" Removing from HashMap" +m1.currentPortfoliosAktienMitKursen );
-		m1.deleteFromCurrentPAktien(Integer.valueOf(m1.selectedCurrentSharesString.substring(0, m1.selectedCurrentSharesString.indexOf(" "))));
-		
+		m1.deleteFromCurrentPAktien(Integer
+				.valueOf(m1.selectedCurrentSharesString.substring(0, m1.selectedCurrentSharesString.indexOf(" "))));
 
 		updateData();
 	}
@@ -358,14 +294,9 @@ public class VC_Shares {
 	private void handleSaveSelected(AktieTableEntry aktie1) {
 		if (aktie1 != null) {
 			m1.selectedAktie = aktie1;
-			// idLabel.setText("" + m1.selectedAktie.get2Portfolio_id());
-			// nameLabel.setText(m1.selectedAktie.get2Name());
-			System.out.println("Selected Aktie:" + aktie1);
 		} else {
 			//
 			m1.selectedAktie = null;
-			// idLabel.setText("");
-			// nameLabel.setText("");
 		}
 	}
 
@@ -373,30 +304,11 @@ public class VC_Shares {
 	private void handleAdd() {
 		m1.currentPortfoliosAktienMitKursen.put(new Integer(m1.selectedAktie.getShare_id()),
 				m1.allAktienOhneKurse.get(m1.selectedAktie.getShare_id()));
-		System.out.println("hinzugefügte Aktie: " + m1.currentPortfoliosAktienMitKursen);
 
 		m1.sortBothCurrentPortfoliosAktien();
 		m1.loadSelectedPortfolioData();
 		updateData();
 
-	}
-
-//<<<<<<< HEAD
-//			@FXML
-//			private void handleAdd() {
-//				m1.addToCurrentPAktien(new Integer(m1.selectedAktie.getShare_id()), m1.allAktienOhneKurse.get(m1.selectedAktie.getShare_id()), new Double(0.0));
-//				System.out.println("hinzugefügte Aktie: " + m1.currentPortfoliosAktienMitKursen);
-//				
-//				m1.sortBothCurrentPortfoliosAktien();
-//				updateData();
-//				
-//			}
-//			
-//=======
-//>>>>>>> pull20
-	@FXML
-	private void handleDelete() {
-		System.out.println("DeleteButton Pressed!");
 	}
 
 	@FXML
@@ -405,7 +317,6 @@ public class VC_Shares {
 			boolean alreadyExists = m1.yourPortfolioTE.stream()
 					.anyMatch(t -> t.get2Name().equals(this.newNameTextField.getText()));
 			if (alreadyExists == true) {
-				System.out.println("Portfolio name already in use.");
 			} else {
 				PortfolioTableEntry p1 = new PortfolioTableEntry(m1.calculateNextPortfolioID(),
 						this.newNameTextField.getText(), m1.loggedInUser_id,
@@ -417,41 +328,35 @@ public class VC_Shares {
 						Double.parseDouble(this.newBondDistTextField.getText()));
 
 				if (p1.get2Name() == "") {
-					System.out.println("Das Namensfeld kann nicht leer bleiben.");
 					return;
 				}
 				if (p1.get2Share_dist() + p1.get2Comm_dist() + p1.get2Curr_dist() + p1.get2Estate_dist()
 						+ p1.get2Bond_dist() != 100) {
-					System.out.println("Die Summe der Prozentwerte muss 100% sein.");
 					return;
 				}
 				;
 				m1.yourPortfolioTE.add(p1);
 				m1.allPortfolioTE.add(p1);
-				System.out.println("Portfolio created.");
 			}
 		} catch (java.lang.NumberFormatException e) {
-			System.out.println("Fehler. Der Inhalt der Textviews muss überprüft werden.");
 		}
 	}
 
 	@FXML
 	private void handleWeiter() throws IOException {
-		System.out.println("Weiterbutton pressed!");
+		handleVorleaufigUpdaten();
+		m1.loadSelectedPortfolioData();
 		this.c1.setSceneToV_Aktienanalyse();
 	}
 
 	@FXML
 	private void handleZurueck() throws IOException {
-		System.out.println("Weiterbutton pressed!");
 		this.c1.setSceneToV_AssetType();
-
 	}
 
 	@FXML
 	private void handleVorleaufigUpdaten() throws IOException {
-		System.out.println("VorleaufigUpdaten pressed!");
-		m1.updatePB_PORTF_SHAREmit12();
+		m1.updatePB_PORTF_SHAREwithPercents();
 	}
 
 	public void create2() {
@@ -467,8 +372,6 @@ public class VC_Shares {
 		LineChart<String, Number> chart = new LineChart<>(xAxis, yAxis);
 		Series<String, Number> s1 = new Series<>(sortedData);
 		Series<String, Number> s2 = new Series<>(sortedData2);
-//		s1.setName("My portfolio");	
-//		s1.setName("My portfolio");
 		chart.getData().add(s1);
 		chart.getData().add(s2);
 		chart.setAnimated(false);
@@ -477,49 +380,30 @@ public class VC_Shares {
 		LocalDate today = LocalDate.now();
 		Random rng = new Random();
 
-		// m1.foreachmap.get(map.keySet().toArray()[0])
-		// Aktie a1 = m1.currentPortfoliosAktienMitKursen
-		// .get(new Integer(6));
-		// HashMap<Date, Double> h1= a1.getHashOfHalfYear();
-		// Set<Date> d1 = h1.keySet();
-		// Date dd1 = (Date) d1.toArray()[0];
-		for (Map.Entry<Date, Double> entry : m1.currentPortfoliosAktienMitKursen
-				.get(new Integer(Integer.valueOf(
+		try {
+			for (Map.Entry<Date, Double> entry : m1.currentPortfoliosAktienMitKursen
+					.get(new Integer(Integer.valueOf(
+							m1.selectedCurrentSharesString.substring(0, m1.selectedCurrentSharesString.indexOf(" ")))))
+					.getHashOfHalfYear().entrySet()) {
+				Date key = entry.getKey();
+				Double value = entry.getValue();
+				LocalDate dateA = Instant.ofEpochMilli(key.getTime()).atZone(ZoneId.systemDefault()).toLocalDate();
+				String formattedDateA = formatter.format(dateA);
+				addData(data, formattedDateA, value);
+				s1.setName(m1.currentPortfoliosAktienMitKursen.get(new Integer(Integer.valueOf(
 						m1.selectedCurrentSharesString.substring(0, m1.selectedCurrentSharesString.indexOf(" ")))))
-				.getHashOfHalfYear().entrySet()) {
-			Date key = entry.getKey();
-			Double value = entry.getValue();
-			LocalDate dateA = Instant.ofEpochMilli(key.getTime()).atZone(ZoneId.systemDefault()).toLocalDate();
-			String formattedDateA = formatter.format(dateA);
-			addData(data, formattedDateA, value);
-			s1.setName(m1.currentPortfoliosAktienMitKursen.get(
-					new Integer(Integer.valueOf(
-						m1.selectedCurrentSharesString.substring(0, m1.selectedCurrentSharesString.indexOf(" ")))
-				)).getName());	
-			// do what you have to do here
-			// In your case, another loop.
+						.getName());
+			}
+		} catch (NullPointerException e) {
+			System.out.print("Caught the NullPointerException");
 		}
-
-		// Date input = (Date) m1.currentPortfoliosAktienMitKursen
-		// .get(new Integer(Integer.valueOf(m1.selectedCurrentSharesString.substring(0,
-		// m1.selectedCurrentSharesString.indexOf(" ")))))
-		// .getHashOfHalfYear()
-		// .keySet()
-		// .toArray()[0];//new Date();
-		// LocalDate date =Instant.ofEpochMilli(input.getTime())
-		// .atZone(ZoneId.systemDefault())
-		// .toLocalDate();
-		// String formattedDate = formatter.format(date);
-		// double value = rng.nextDouble() ;
-		// addData(data, formattedDate, value);
-
-		for (int i = 0; i < 20; i++) {
-			LocalDate date7 = today.minusDays(rng.nextInt(dayRange));
-			String formattedDate = formatter.format(date7);
-			double value = rng.nextDouble();
-
-			addData(data7, formattedDate, value);
-		}
+		// for (int i = 0; i < 20; i++) {
+		// LocalDate date7 = today.minusDays(rng.nextInt(dayRange));
+		// String formattedDate = formatter.format(date7);
+		// double value = rng.nextDouble();
+		//
+		// addData(data7, formattedDate, value);
+		// }
 
 		DatePicker datePicker = new DatePicker();
 		Spinner<Double> valuePicker = new Spinner<>(0.0, 1.0, 0, 0.1);
@@ -527,13 +411,12 @@ public class VC_Shares {
 
 		Button addButton = new Button("Add");
 		addButton.setOnAction(e -> addData(data, formatter.format(datePicker.getValue()), valuePicker.getValue()));
-
 		HBox controls = new HBox(5, datePicker, valuePicker, addButton);
 		controls.setAlignment(Pos.CENTER);
 		controls.setPadding(new Insets(5));
 
 		this.bp1.setCenter(chart);
-	//	this.bp1.setBottom(controls);
+		// this.bp1.setBottom(controls);
 	}
 
 	private DateTimeFormatter formatter = DateTimeFormatter.ISO_LOCAL_DATE;
